fix(projects): description field issue in create/edit project
Fix mark as read when for only one notification.
Required indication in textarea input.
Fix required description field in project create modal.
Fix projects not reloading on create/edit.
Show project title in project details page.
Fix media not showing in survey information.
Add scroll-space below draft icon.

--- a/src/containers/Projects/List/styles.scss
+++ b/src/containers/Projects/List/styles.scss
@@ -149,6 +149,7 @@
                 align-items: center;
                 font-size: var(--font-size-small);
                 color: var(--color-grey);
+                user-select: none;
 
                 .select {
                     color: var(--color-dark);
